tests/test-files/parse-or.txt
================================================================================
100 Malformed or expression
================================================================================

(package test-package)

(define x (or))

--------------------------------------------------------------------------------

error: Malformed or expression
  --> test:3:13
   |
 3 |  (define x (or))
   |               ^ expected one or more arguments
